fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-gateway
spec:
  type: ClusterIP
  selector:
    app: fastapi-gateway
  ports:
  - port: 80
    targetPort: 8000
